<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_next_camera"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_camera"
        />
    <item
        android:id="@+id/menu_take_photo"
        android:orderInCategory="100"
        app:showAsAction="always|withText"
        android:title="@string/menu_take_photo"
        />
    <item
        android:id="@+id/menu_next_curve_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_curve_filter"
        />
    <item
        android:id="@+id/menu_next_mixer_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_mixer_filter"
        />
    <item
        android:id="@+id/menu_next_convolution_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_convolution_filter"
        />
    <item
        android:id="@+id/menu_next_image_detection_filter"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_next_image_detection_filter"
        />

</menu>